Ultimos detalles, modulos no encontrados

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,16 +14,13 @@
 
   <div class="layout">
     <aside class="sidebar">
-      <ul>
-        <li><a href="./modules/inventario.html" data-module="inventario" class="nav-link">Inventario</a></li>
-        <li><a href="#catalogo" data-module="catalogo" class="nav-link">Catálogo / Parametrización</a></li>
-        <li><a href="#ventas" data-module="ventas" class="nav-link">Facturación / Ventas</a></li>
-        <nav>
-        <a href="#" data-module="inventario">Inventario</a>
-        <a href="#" data-module="traslados">Traslados</a>
-</nav>
-
-      </ul>
+<ul>
+  <li><a href="./modules/inventario.html" data-module="inventario" class="nav-link">Inventario</a></li>
+  <li><a href="#catalogo" data-module="catalogo" class="nav-link">Catálogo / Parametrización</a></li>
+  <li><a href="#ventas" data-module="ventas" class="nav-link">Facturación / Ventas</a></li>
+  <li><a href="#" data-module="inventario" class="nav-link">Inventario</a></li>
+  <li><a href="#" data-module="traslados" class="nav-link">Traslados</a></li>
+</ul>
     </aside>
 
     <main id="app-content" class="content">
